--- a/src/html/detail.html
+++ b/src/html/detail.html
@@ -142,6 +142,7 @@
     </div>
     <div id="de-footer"></div>
     <div id="de-right-guide"></div>
+    <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=bqYSGjf8dGecpxcQKXTSdshDaxAY1DyB"></script>
     <script src="../js/require.js" data-main="../js/detail"></script>
 </body>
 </html>
