--- a/src/html/oplist.html
+++ b/src/html/oplist.html
@@ -212,6 +212,7 @@
     </div>
     <div id="op-footer"></div>
     <div id="op-right-guide"></div>
+    <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=bqYSGjf8dGecpxcQKXTSdshDaxAY1DyB"></script>
     <script src="../js/require.js" data-main="../js/oplist"></script>
 </body>
 </html>
