--- a/src/index.html
+++ b/src/index.html
@@ -791,8 +791,8 @@
     <div id="customerService">
         <div class="touxiang">
             <div>
-                <img src="/img/index/kf.jpg" alt="" />
-                <span>小莉</span>
+                <img src="/img/index/kf.jpg" />
+                <select></select>
                 <i class="i1"></i>
                 <i class="i2"></i>
                 <i class="i3"></i>
@@ -800,7 +800,7 @@
         </div>
         <div class="jiaoliu">
             <img src="/img/index/customerService1.png" height="150" width="260" alt="" />
-            <ul class="message">
+            <ul class="message clear">
                 <li class="leftm"><div>您好，欢迎光临深圳华盛电子商务有限公司，请问有什么可以帮您？</div>
                 <span class="timestamp"></span>
                 </li>
@@ -820,7 +820,7 @@
             
         </div>
         <div class="end">
-            <span>结束会话</span>
+            <span class="close">结束会话</span>
             <input type="button" value="发送" id="send"/>
         </div>
         
